ensure text field is visible

--- a/app/assets/stylesheets/reset.scss
+++ b/app/assets/stylesheets/reset.scss
@@ -57,6 +57,3 @@ pre {
   font-size: 11px;
   &.auto_generated {} }
 
-input, textarea {
-  border: 1px solid #eee; }
-
